--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,11 +1,2 @@
 TODO
-
-- re-structure directories: terms, triple_store, parser, reasoner
-
-- support for OWL datatype terms
-
-- improve exception diagnostic info
-
-- run-time definition of custom IRIs
-
-- settings file: custom IRIs, OWL search paths
+- separate modules (dirs, namespaces, libs): node_store, triple_store, parser, reasoner
