--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,5 +1,8 @@
 TODO
 
+- check that all FaCT++ kernel and expression manager methods work;
+  some may require more methods exported in DLL
+
 - lax (non-strict) parsing into triple store
    allow adding new terms to standard namespaces
    
