--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -7,3 +7,5 @@ TODO
    allow adding new terms to standard namespaces
    
 - lax (non-strict) axiom generation
+
+- in Raptor wrapper, allocate fixed-length buffer
