--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -11,3 +11,5 @@ TODO
 - in Raptor wrapper, allocate fixed-length buffer
 
 - make Ns_iri class to represent namespace IRIs
+
+- check how classes handle self-assignment
