--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libowlcpp (0.3.3-684) unstable; urgency=low
+
+  * Fixed the git revision
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Tue, 26 Jan 2016 14:47:00 +0100
+
 libowlcpp (0.3.3-683) unstable; urgency=low
 
   * Reformatted README
